# pico2-freertos-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  blink.c  debug.sh  flash.sh  inspector.c  inspector.h  main.c  pico_sdk_import.cmake
.github/workflows/: build.yml
config/: FreeRTOSConfig.h
